WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117793
[BlackBerry] Several tests crash due to an assert when creating an ImageBuffer
https://bugs.webkit.org/show_bug.cgi?id=117793
Summary
[BlackBerry] Several tests crash due to an assert when creating an ImageBuffer
Carlos Garcia Campos
Reported
2013-06-19 05:45:16 PDT
Regressions: Unexpected crashes (14) editing/pasteboard/dataTransfer-setData-getData.html [ Crash ] editing/pasteboard/drag-drop-dead-frame.html [ Crash ] editing/pasteboard/drag-drop-input-in-svg.svg [ Crash ] editing/pasteboard/drag-drop-input-textarea.html [ Crash ] editing/pasteboard/drag-drop-url-text.html [ Crash ] editing/pasteboard/drop-inputtext-acquires-style.html [ Crash ] editing/pasteboard/drop-text-events-sideeffect-crash.html [ Crash ] editing/pasteboard/drop-text-events-sideeffect.html [ Crash ] editing/pasteboard/drop-text-events.html [ Crash ] editing/pasteboard/get-data-text-plain-drop.html [ Crash ] fast/css/resize-single-axis.html [ Crash ] fast/forms/drag-into-textarea.html [ Crash ] fast/forms/drag-out-of-textarea.html [ Crash ] fast/forms/textfield-drag-into-disabled.html [ Crash ]
Attachments
Patch
(1.62 KB, patch)
2013-06-19 05:48 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-06-19 05:48:33 PDT
Created
attachment 204995
[details]
Patch
Rob Buis
Comment 2
2013-06-19 07:06:38 PDT
Comment on
attachment 204995
[details]
Patch I did the same patch locally :((( Anyway the patch is fine and it is good to get those crashers out of the way.
WebKit Commit Bot
Comment 3
2013-06-19 08:23:54 PDT
Comment on
attachment 204995
[details]
Patch Clearing flags on attachment: 204995 Committed
r151734
: <
http://trac.webkit.org/changeset/151734
>
WebKit Commit Bot
Comment 4
2013-06-19 08:23:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug