[BlackBerry] Several tests crash due to an assert when creating an ImageBuffer https://bugs.webkit.org/show_bug.cgi?id=117793

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2013-06-19
Reviewed by Rob Buis.

JIRA 388741

Fixes a crash in several layout tests due to an assert when
creating an ImageBuffer with an empty size.

* platform/graphics/blackberry/ImageBufferBlackBerry.cpp:
(WebCore::ImageBuffer::ImageBuffer): Return early if the given
size is empty.

Canonical link: https://commits.webkit.org/135924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151734 268f45cc-cd09-0410-ab3c-d52691b4dbfc